  . Invalid serialization data for a DateTime or DatePeriod object will now
    throw an instance of Error from __wakeup() or __set_state() instead of
    resulting in a fatal error. (Aaron Piotrowski)
  . Timezone initialization failure from serialized data will now throw an
    instance of Error from __wakeup() or __set_state() instead of resulting in
    a fatal error. (Aaron Piotrowski)

- DOM:
  . Invalid schema or RelaxNG validation contexts will throw an instance of
    Error instead of resulting in a fatal error. (Aaron Piotrowski)
  . Attempting to register a node class that does not extend the appropriate
    base class will now throw an instance of Error instead of resulting in a
    fatal error. (Aaron Piotrowski)
  . Attempting to read an invalid or write to a readonly property will throw
    an instance of Error instead of resulting in a fatal error. (Aaron
    Piotrowski)

- GD:
  . Fixed bug #72404 (imagecreatefromjpeg fails on selfie). (cmb)

- IMAP:
  . An email address longer than 16385 bytes will throw an instance of Error
    instead of resulting in a fatal error. (Aaron Piotrowski)
    
- Intl:
  . Failure to call the parent constructor in a class extending Collator
    before invoking the parent methods will throw an instance of Error
    instead of resulting in a recoverable fatal error. (Aaron Piotrowski)
  . Cloning a Transliterator object may will now throw an instance of Error
    instead of resulting in a fatal error if cloning the internal
    transliterator fails. (Aaron Piotrowski)

- LDAP:
  . Providing an unknown modification type to ldap_batch_modify() will now
    throw an instance of Error instead of resulting in a fatal error.
    (Aaron Piotrowski)

- Mbstring:
  . mb_ereg() and mb_eregi() will now throw an instance of ParseError if an
    invalid PHP expression is provided and the 'e' option is used. (Aaron
    Piotrowski)

- Mcrypt:
  . mcrypt_encrypt() and mcrypt_decrypt() will throw an instance of Error